# w3f-grant-support-repo

./: .env  .gitignore  .gitpod.yml  LICENSE  README.md  devcontainer-dc.yml  docker-compose.yml  env  env.sample
.devcontainer/: devcontainer.json  install-deps.sh
demos/node-demo/: package.json
demos/node-demo/src/: index.js
demos/nodejs/: README.md  package.json  pnpm-lock.yaml
demos/nodejs/src/: index.js
demos/rust/: .rusty-hook.toml  Cargo.toml  README.md
demos/rust-demo/: Cargo.toml
demos/rust/src/: main.rs
envFiles/: anagolayCli  publishService  wsService
node-demo/: README.md  package.json  pnpm-lock.yaml
node-demo/src/: index.js
rust-demo/: Cargo.toml  README.md
rust-demo/src/: main.rs
