[package]
name = "rust-demo"
repository = "https://gitlab.com/anagolay/w3f-grant-support-repo"
homepage = "https://gitlab.com/anagolay/w3f-grant-support-repo/rust-demo"
version = "0.1.0"
authors = [
  "Daniel Maricic <daniel@woss.io>",
  "Adriano Dalpane <adriano.dalpane@gmail.com>",
]
edition = "2021"
description = "Demonstrating workflow execution in Rust"
license = "Apache 2.0"

[dependencies.wf_file_multihash_cid]
git = "https://ipfs.anagolay.network/ipfs/bafybeigjcga7j6wf2svgspvsgzt7qqez37qm4borp4njyfnsqaadkmsxbu"

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dev-dependencies.rusty-hook]
version= "0.11.2"

[patch.'https://gitlab.com/anagolay/operations/op_multihash']
op_multihash = { git = "https://ipfs.anagolay.network/ipfs/bafybeid643i7bpsffvaw6wvsf2runosyqzrbmronvpixkybsusaoeqwjbm" }
