[package]
name = "rust-demo"
repository = "https://gitlab.com/anagolay/w3f-grant-support-repo"
homepage = "https://gitlab.com/anagolay/w3f-grant-support-repo/rust-demo"
version = "0.3.0"
authors = [
  "Adriano Dalpane <adriano.dalpane@gmail.com>",
  "Daniel Maricic <daniel@woss.io>",
]
edition = "2021"
description = "Demonstrating workflow execution in Rust"
license = "Apache 2.0"

[dependencies.wf_file_multihash_cid]
git = "https://ipfs.anagolay.network/ipfs/bafybeifz7k7ljrmaylaetai577d4jra6ggwpvj6de44ed7p7i4fur3gtta"

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dev-dependencies.rusty-hook]
version= "0.11.2"

[patch.'https://gitlab.com/anagolay/operations/op_multihash']
op_multihash = { git = "https://ipfs.anagolay.network/ipfs/bafybeifdnvwcj6lxnyfjytief3ftvcqqavwel3bfgf7ee3o4norawp5rne" }
